Added possibility to load saved recipes

--- a/AnvilTool/MainWindow.xaml
+++ b/AnvilTool/MainWindow.xaml
@@ -43,8 +43,8 @@
             <Button MinWidth="75" Content="Mark Direction Change" Command="{Binding MarkDirectionChangeCmd}" Margin="0,0,6,0"/>
             <Button MinWidth="75" Content="Found Exact" Command="{Binding FoundExactCmd}" Margin="0,0,6,0"/>
             <Button MinWidth="75" Content="Reset" Command="{Binding ResetCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Salva Configurazione" Command="{Binding SaveCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Apri ricette" Command="{Binding OpenRecepiesCmd}" Margin="0,0,6,0"/>
+            <Button MinWidth="75" Content="Save Recipe" Command="{Binding SaveCmd}" Margin="0,0,6,0"/>
+            <Button MinWidth="75" Content="Load Recipe" Command="{Binding LoadRecipeCmd}" Margin="0,0,6,0"/>
         </StackPanel>
 
         <!-- Mosse e sequenze -->
