--- a/AnvilTool/MainWindow.xaml
+++ b/AnvilTool/MainWindow.xaml
@@ -1,7 +1,11 @@
 ﻿<Window x:Class="AnvilTool.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:Const="clr-namespace:AnvilTool.Constants" xmlns:usercontrols="clr-namespace:AnvilTool.UserControls"
+        xmlns:Const="clr-namespace:AnvilTool.Constants"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d" 
+        xmlns:usercontrols="clr-namespace:AnvilTool.UserControls"
         Title="Anvil Helper" Height="520" Width="720">
     <Grid Margin="8">
         <Grid.RowDefinitions>
@@ -24,9 +28,18 @@
                 
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                     <StackPanel Margin="2 2">
-                        <TextBlock Text="{Binding StatusLine}" Margin="0,6,0,0"/>
+                        <TextBlock Margin="0,6,0,0">
+                            <Run Text="Pos: "/>
+                            <Run Text="{Binding CurrentPos}" d:Text="60" />
+                        </TextBlock>
                         <TextBlock Text="Intervallo possibile:" FontWeight="Bold"/>
-                        <TextBlock Text="{Binding IntervalDisplay}" />
+                        <TextBlock >
+                            <Run Text="["/>
+                            <Run Text="{Binding MinPossible}" d:Text="20"/>
+                            <Run Text=", "/>
+                            <Run Text="{Binding MaxPossible}" d:Text="110"/>
+                            <Run Text="]"/>
+                        </TextBlock>
                     </StackPanel>
                     <StackPanel Margin="10 2">
                         <TextBlock Text="Target Attuale"/>
@@ -66,11 +79,6 @@
                     </ItemsControl.ItemsPanel>
                     <ItemsControl.ItemTemplate>
                         <DataTemplate>
-                            <!--<Button Content="{Binding Label}"
-                                    Command="{Binding DataContext.PressMoveCmd, RelativeSource={RelativeSource AncestorType=Window}}"
-                                    CommandParameter="{Binding .}"
-                                    MinWidth="75"
-                                    Margin="2"/>-->
                             <usercontrols:MoveButton Move="{Binding .}"
                                                      MoveClickCommand="{Binding DataContext.PressMoveCmd, RelativeSource={RelativeSource AncestorType=Window}}"/>
                         </DataTemplate>
