--- a/AnvilTool/MainWindowNew.xaml
+++ b/AnvilTool/MainWindowNew.xaml
@@ -80,5 +80,18 @@
             <Button MinWidth="75" Content="Save Recipe" Command="{Binding SaveRecipeCmd}" Margin="0,0,6,0"/>
             <Button MinWidth="75" Content="Load Recipe" Command="{Binding LoadRecipeCmd}" Margin="0,0,6,0"/>
         </StackPanel>
+
+        <ItemsControl Grid.Row="4" ItemsSource="{Binding ComputedSequence}">
+            <ItemsControl.ItemsPanel>
+                <ItemsPanelTemplate>
+                    <WrapPanel FlowDirection="LeftToRight"/>
+                </ItemsPanelTemplate>
+            </ItemsControl.ItemsPanel>
+            <ItemsControl.ItemTemplate>
+                <DataTemplate>
+                    <usercontrols:MoveButtonNew Move="{Binding .}"/>
+                </DataTemplate>
+            </ItemsControl.ItemTemplate>
+        </ItemsControl>
     </Grid>
 </Window>
