--- a/AnvilTool/UserControls/MoveBar.xaml
+++ b/AnvilTool/UserControls/MoveBar.xaml
@@ -7,7 +7,7 @@
              xmlns:properties="clr-namespace:AnvilTool.Properties"
              mc:Ignorable="d" >
     <UserControl.Resources>
-        <ResourceDictionary Source="/ResourceDictionary/CommonStyles.xaml"/>
+        <ResourceDictionary Source="pack://application:,,,/AnvilTool;component/ResourceDictionary/CommonStyles.xaml"/>
     </UserControl.Resources>
     <Canvas Height="{StaticResource barHeight}" Width="{StaticResource barWidth}">
         <Canvas.Resources>
