--- a/AnvilTool/MainWindowNew.xaml
+++ b/AnvilTool/MainWindowNew.xaml
@@ -5,8 +5,10 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnvilTool" xmlns:usercontrols="clr-namespace:AnvilTool.UserControls"
         xmlns:Const="clr-namespace:AnvilTool.Constants"
-        xmlns:properties="clr-namespace:AnvilTool.Properties"
+        xmlns:properties="clr-namespace:AnvilTool.Properties" 
+        ResizeMode="NoResize"
         mc:Ignorable="d"
+        Background="LightGray"
         Title="MainWindowNew" Height="520" Width="720">
     <Window.Resources>
         <ResourceDictionary Source="pack://application:,,,/AnvilTool;component/ResourceDictionary/CommonStyles.xaml"/>
@@ -14,35 +16,17 @@
     <Grid>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="100"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
-        <Image Source="{Binding Source={x:Static properties:Resources.topBar}, Converter={StaticResource ImageConverter}}"
-               VerticalAlignment="Center" 
-               HorizontalAlignment="Center"
-               Width="280"/>
+        <usercontrols:FinalSequence FinalSeq="{Binding FinalSequence, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                    Margin="0 8"
+                                    HorizontalAlignment="Center"/>
 
-        <!--FINAL SEQUENCE-->
-        <ItemsControl ItemsSource="{Binding FinalSequence}"
-                      Grid.Row="0"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center">
-            <ItemsControl.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"/>
-                </ItemsPanelTemplate>
-            </ItemsControl.ItemsPanel>
-            <ItemsControl.ItemTemplate>
-                <DataTemplate>
-                    <!--Usare un bottone diverso per la final seq e la computed seq-->
-                    <usercontrols:MoveButtonNew Move="{Binding .}"/>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ItemsControl>
         
         <!--AVAILABLE MOVES-->
         <ItemsControl ItemsSource="{x:Static Const:Consts.Moves}"
@@ -78,6 +62,7 @@
             <Button MinWidth="75" Content="Reset" Command="{Binding ResetCmd}" Margin="0,0,6,0"/>
             <Button MinWidth="75" Content="Save Recipe" Command="{Binding SaveRecipeCmd}" Margin="0,0,6,0"/>
             <Button MinWidth="75" Content="Load Recipe" Command="{Binding LoadRecipeCmd}" Margin="0,0,6,0"/>
+            <Button MinWidth="75" Content="Compute Shortest" Command="{Binding ComputeShortestCmd}" Margin="0,0,6,0"/>
         </StackPanel>
 
         <ItemsControl Grid.Row="4" ItemsSource="{Binding ComputedSequence}">
@@ -88,7 +73,8 @@
             </ItemsControl.ItemsPanel>
             <ItemsControl.ItemTemplate>
                 <DataTemplate>
-                    <usercontrols:MoveButtonNew Move="{Binding .}"/>
+                    <!--<usercontrols:MoveButtonNew Move="{Binding .}"/>-->
+                    <usercontrols:ActionMove Move="{Binding .}"/>
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
