--- a/AnvilTool/ResourceDictionary/CommonStyles.xaml
+++ b/AnvilTool/ResourceDictionary/CommonStyles.xaml
@@ -25,6 +25,7 @@
 
     <!--#region Values Definitions -->
     <sys:Double x:Key="btnDim">50</sys:Double>
+    <sys:Double x:Key="stepDim">30</sys:Double>
     <sys:Double x:Key="barHeight">20</sys:Double>
     <sys:Double x:Key="barWidth">400</sys:Double>
     <sys:Double x:Key="sliderHeight">16</sys:Double>
