--- a/AnvilTool/MainWindowNew.xaml
+++ b/AnvilTool/MainWindowNew.xaml
@@ -9,7 +9,7 @@
         ResizeMode="NoResize"
         mc:Ignorable="d"
         Background="LightGray"
-        Title="MainWindowNew" Height="520" Width="720">
+        Title="Anvil Tool" Height="520" Width="720">
     <Window.Resources>
         <ResourceDictionary Source="pack://application:,,,/AnvilTool;component/ResourceDictionary/CommonStyles.xaml"/>
     </Window.Resources>
@@ -23,14 +23,23 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+
         <usercontrols:FinalSequence FinalSeq="{Binding FinalSequence, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                                     Margin="0 8"
+                                    Grid.Row="0"
+                                    Grid.Column="1"
                                     HorizontalAlignment="Center"/>
 
         
         <!--AVAILABLE MOVES-->
         <ItemsControl ItemsSource="{x:Static Const:Consts.Moves}"
                       Grid.Row="1"
+                      Grid.Column="1"
                       ToolTip="Available Moves">
             <ItemsControl.ItemsPanel>
                 <ItemsPanelTemplate>
@@ -47,6 +56,8 @@
         </ItemsControl>
         <!--Status Bar-->
         <usercontrols:MoveBar Grid.Row="2"
+                              Grid.Column="0"
+                              Grid.ColumnSpan="3"
                               Margin="0, 4"
                               Height="{StaticResource barHeight}"
                               MinPossible="{Binding MinPossible}"
@@ -54,15 +65,27 @@
                               CurrentPos="{Binding CurrentPos}"/>
         
         <!--Commands - Temporary-->
-        <StackPanel Grid.Row="3" Orientation="Horizontal" Margin="8">
+        <StackPanel Grid.Row="0" 
+                    Grid.RowSpan="2"
+                    Grid.Column="0"
+                    Orientation="Vertical" 
+                    Margin="8">
+            <StackPanel.Resources>
+                <Style TargetType="Button">
+                    <Setter Property="MinWidth" Value="150"/>
+                    <Setter Property="Margin" Value="0,4,0,0"/>
+                    <Setter Property="HorizontalAlignment" Value="Left"/>
+                </Style>
+            </StackPanel.Resources>
+           
             <!--<Button Content="Record Final Sequence" Command="{Binding StartRecordFinalCmd}" Margin="0,0,6,0"/>-->
-            <Button MinWidth="75" Content="Start Exploration" Command="{Binding ToggleExploreCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Mark Direction Change" Command="{Binding MarkDirectionChangeCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Found Exact" Command="{Binding FoundExactCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Reset" Command="{Binding ResetCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Save Recipe" Command="{Binding SaveRecipeCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Load Recipe" Command="{Binding LoadRecipeCmd}" Margin="0,0,6,0"/>
-            <Button MinWidth="75" Content="Compute Shortest" Command="{Binding ComputeShortestCmd}" Margin="0,0,6,0"/>
+            <Button Content="Start Exploration" Command="{Binding ToggleExploreCmd}"/>
+            <Button Content="Mark Direction Change" Command="{Binding MarkDirectionChangeCmd}"/>
+            <Button Content="Found Exact" Command="{Binding FoundExactCmd}"/>
+            <Button Content="Reset" Command="{Binding ResetCmd}"/>
+            <Button Content="Save Recipe" Command="{Binding SaveRecipeCmd}"/>
+            <Button Content="Load Recipe" Command="{Binding LoadRecipeCmd}"/>
+            <Button Content="Compute Shortest" Command="{Binding ComputeShortestCmd}"/>
         </StackPanel>
 
         <ItemsControl Grid.Row="4" ItemsSource="{Binding ComputedSequence}">
@@ -78,5 +101,29 @@
                 </DataTemplate>
             </ItemsControl.ItemTemplate>
         </ItemsControl>
+
+        <!--CURRENT - Temporary-->
+        <StackPanel Grid.Row="1"
+                    Grid.Column="2"
+                    Orientation="Horizontal">
+            <StackPanel Margin="2 2">
+                <TextBlock Margin="0,6,0,0">
+            <Run Text="Pos: "/>
+            <Run Text="{Binding CurrentPos}" d:Text="60" />
+                </TextBlock>
+                <TextBlock Text="Intervallo possibile:" FontWeight="Bold"/>
+                <TextBlock >
+            <Run Text="["/>
+            <Run Text="{Binding MinPossible}" d:Text="20"/>
+            <Run Text=", "/>
+            <Run Text="{Binding MaxPossible}" d:Text="110"/>
+            <Run Text="]"/>
+                </TextBlock>
+            </StackPanel>
+            <StackPanel Margin="10 2">
+                <TextBlock Text="Target Attuale"/>
+                <TextBox   Text="{Binding ActualTarget, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
+            </StackPanel>
+        </StackPanel>
     </Grid>
 </Window>
